approach.txt added

--- a/supervised/classification/hacker_earth/society_generale/complaint_tracker/complaint_tracker_fifth_round_lgbm.ipynb
+++ b/supervised/classification/hacker_earth/society_generale/complaint_tracker/complaint_tracker_fifth_round_lgbm.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as panda\n",
     "\n",
     "from sklearn.model_selection import learning_curve, train_test_split,GridSearchCV\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder, MinMaxScaler, RobustScaler\n",
     "from sklearn.pipeline import make_pipeline, Pipeline\n",
     "from sklearn.metrics import accuracy_score, mean_absolute_error, classification_report, \\\n",
     "    confusion_matrix, f1_score, roc_curve, roc_auc_score\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        " 'y']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "[5 rows x 56 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "4  0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,11 +678,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30286, 56)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "_x_train,_x_test,_y_train,_y_test = train_test_split(x,y, test_size = 0.3, stratify= y, random_state =12)"
+    "_x_train,_x_test,_y_train,_y_test = train_test_split(x,y, test_size = 0.3, stratify= y, random_state =12)\n",
+    "_x_train.shape"
    ]
   },
   {
@@ -716,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -848,62 +860,62 @@
      "output_type": "stream",
      "text": [
       "(12980, 1) (30286, 1)\n",
-      "---- [    0     1     2 ... 30283 30284 30285] [   10    13    21 ... 30260 30273 30274]\n",
+      "---- [    0     1     2 ... 30283 30284 30285] [   28    31    32 ... 30254 30258 30275]\n",
       "fold n°0\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60795\ttraining's f1_score: 0.285258\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.280987\n",
-      "---- [    0     1     2 ... 30283 30284 30285] [    7    12    24 ... 30261 30262 30276]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.28377\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.287865\n",
+      "---- [    0     1     2 ... 30283 30284 30285] [    8    11    36 ... 30260 30274 30279]\n",
       "fold n°1\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.282619\tvalid_1's multi_logloss: 1.60796\tvalid_1's f1_score: 0.280972\n",
-      "---- [    0     1     2 ... 30283 30284 30285] [    6     9    11 ... 30242 30249 30280]\n",
+      "[1]\ttraining's multi_logloss: 1.60795\ttraining's f1_score: 0.285199\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.299434\n",
+      "---- [    0     1     4 ... 30283 30284 30285] [    2     3     7 ... 30276 30277 30282]\n",
       "fold n°2\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.285604\tvalid_1's multi_logloss: 1.60796\tvalid_1's f1_score: 0.280303\n",
-      "---- [    0     1     2 ... 30283 30284 30285] [    5    19    23 ... 30255 30263 30266]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.287001\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.280607\n",
+      "---- [    0     2     3 ... 30283 30284 30285] [    1     4    16 ... 30248 30249 30259]\n",
       "fold n°3\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.282285\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.28785\n",
-      "---- [    0     1     2 ... 30282 30283 30284] [   14    17    54 ... 30277 30278 30285]\n",
+      "[1]\ttraining's multi_logloss: 1.60795\ttraining's f1_score: 0.287597\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.291851\n",
+      "---- [    0     1     2 ... 30283 30284 30285] [   10    21    26 ... 30270 30271 30278]\n",
       "fold n°4\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.277669\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.288919\n",
-      "---- [    0     1     3 ... 30283 30284 30285] [    2     4    20 ... 30253 30271 30272]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.285485\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.273419\n",
+      "---- [    0     1     2 ... 30283 30284 30285] [    5    30    35 ... 30267 30268 30281]\n",
       "fold n°5\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.284027\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.285325\n",
-      "---- [    1     2     3 ... 30282 30283 30285] [    0    15    18 ... 30268 30279 30284]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.290699\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.295086\n",
+      "---- [    0     1     2 ... 30281 30282 30284] [   34    58    67 ... 30280 30283 30285]\n",
       "fold n°6\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.284045\tvalid_1's multi_logloss: 1.60796\tvalid_1's f1_score: 0.29104\n",
-      "---- [    0     1     2 ... 30282 30284 30285] [   27    29    43 ... 30270 30281 30283]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.278932\tvalid_1's multi_logloss: 1.60795\tvalid_1's f1_score: 0.284505\n",
+      "---- [    0     1     2 ... 30282 30283 30285] [   12    17    20 ... 30246 30252 30284]\n",
       "fold n°7\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.285295\tvalid_1's multi_logloss: 1.60796\tvalid_1's f1_score: 0.290962\n",
-      "---- [    0     1     2 ... 30283 30284 30285] [    3    16    35 ... 30256 30275 30282]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.281297\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.272898\n",
+      "---- [    0     1     2 ... 30283 30284 30285] [   13    18    23 ... 30232 30245 30263]\n",
       "fold n°8\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.285401\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.276436\n",
-      "---- [    0     2     3 ... 30283 30284 30285] [    1     8    31 ... 30265 30267 30269]\n",
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.28165\tvalid_1's multi_logloss: 1.60796\tvalid_1's f1_score: 0.285274\n",
+      "---- [    1     2     3 ... 30283 30284 30285] [    0     6     9 ... 30251 30272 30273]\n",
       "fold n°9\n",
       "Training until validation scores don't improve for 150 rounds.\n",
       "Early stopping, best iteration is:\n",
-      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.287404\tvalid_1's multi_logloss: 1.60797\tvalid_1's f1_score: 0.290294\n"
+      "[1]\ttraining's multi_logloss: 1.60796\ttraining's f1_score: 0.281917\tvalid_1's multi_logloss: 1.60796\tvalid_1's f1_score: 0.291404\n"
      ]
     }
    ],
    "source": [
     "folds = StratifiedKFold(n_splits =10, shuffle = True)\n",
-    "scaler = StandardScaler()\n",
+    "scaler = MinMaxScaler()\n",
     "_x_train = scaler.fit_transform(_x_train)\n",
     "_x_test = scaler.fit_transform(_x_test)\n",
     "print(_y_test.shape,_y_train.shape)\n",
@@ -930,7 +942,7 @@
     "    \n",
     "    'metric' :None,\n",
     "    'num_class': 5,\n",
-    "        'num_leaves': 32,\n",
+    "        'num_leaves': 25,\n",
     "    'class_weight' :'balanced',\n",
     "         'min_data_in_leaf': 50, \n",
     "         'objective':'multiclass',\n",
@@ -1015,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1036,7 @@
        "(18543, 66)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1057,7 @@
        "(43266, 56)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1056,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1350,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1379,7 @@
        "((18543, 56), (43266, 56))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1399,7 @@
        "set()"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1408,16 +1420,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([18444,     0,    99], dtype=int64)"
+       "array([18543], dtype=int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1509,7 @@
        "4         Te-5  Closed with explanation"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1771,7 +1783,7 @@
        "44  0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1814,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1893,7 @@
        "4  0  Closed with explanation"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -2081,7 +2093,7 @@
        "24  Closed with explanation        Te-25"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2095,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
