societe general vectorized...72 score f1

--- a/supervised/classification/hacker_earth/society_generale/complaint_tracker/todo.txt
+++ b/supervised/classification/hacker_earth/society_generale/complaint_tracker/todo.txt
@@ -12,6 +12,8 @@ round 5 : ignore complaint summary/ run grid search of xgbclassifier - done. ran
 round 6 : ignore complaint summary/ run grid search of other classifiers such as rdge/ensemble,etc - not good scores
 
 round 7 : ignore complaint summary/ imblearn on imbalanced data sets
+		
+over sampling minority - gave pretty similar scores		
 
 round 8 : keras --done no improvement
 
@@ -20,6 +22,9 @@ round 9 : stratified shuffle split - done. rank 157
 round 10 : keras, figure out a way to pass f1 weighted as metric in keras
 
 round 11 : lgbm lgbclassifier -gave pretty much similar scores
+
+round 12 : append tfidf vectorizer results to panda and feed to models
+
 
 ...to do...all i can think of right now
 
