first analysis_1.ipynb

--- a/supervised/classification/kaggle/costa_rican/analysis_1.ipynb
+++ b/supervised/classification/kaggle/costa_rican/analysis_1.ipynb
@@ -5578,13 +5578,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 256,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9557, 145)"
+      ]
+     },
+     "execution_count": 256,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we have completed our entire data cleaning .. in the sense we have filled in the null values and \n",
     "# checked for empty values as well. data is pretty clean. we can now safely save the updated data for further analysis\n",
-    "\n"
+    "\n",
+    "train_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.to_csv('data/train_1.csv', index=False)"
    ]
   }
  ],
