--- a/supervised/regression/kaggle/elo/merging_feature_engineered_new_3.ipynb
+++ b/supervised/regression/kaggle/elo/merging_feature_engineered_new_3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_path = 'all_new/train_2.csv'\n",
-    "test_data_path = 'all_new/test_2.csv'\n",
-    "new_treated_transaction_path = 'all_new/agg_new_1.csv'\n",
+    "train_data_path = 'C:/somak/real_world_use_cases_1/supervised/regression/kaggle/elo/all_new/train_2.csv'\n",
+    "test_data_path = 'C:/somak/real_world_use_cases_1/supervised/regression/kaggle/elo/all_new/test_2.csv'\n",
+    "new_treated_transaction_path = 'all_new/treated_new_transaction.csv'\n",
     "# treated_historical_transaction_path = 'all_new/treated_historical_transactions_1.csv'\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        " 'first_active_day': dtype('int64')}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,16 +67,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-a55972488af8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdel\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'train_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "del train_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +222,7 @@
        "4  1509494400000000000  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -246,26 +258,26 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>card_id</th>\n",
-       "      <th>new_purchase_amount_sum</th>\n",
-       "      <th>new_purchase_amount_mean</th>\n",
-       "      <th>new_purchase_amount_max</th>\n",
-       "      <th>new_month_lag_sum</th>\n",
-       "      <th>new_month_lag_mean</th>\n",
-       "      <th>new_month_lag_max</th>\n",
-       "      <th>new_enc_category_2_1_sum</th>\n",
-       "      <th>new_enc_category_2_2_sum</th>\n",
-       "      <th>new_enc_category_2_3_sum</th>\n",
+       "      <th>purchase_amount_sum</th>\n",
+       "      <th>purchase_amount_mean</th>\n",
+       "      <th>purchase_amount_max</th>\n",
+       "      <th>month_lag_sum</th>\n",
+       "      <th>month_lag_mean</th>\n",
+       "      <th>month_lag_max</th>\n",
+       "      <th>enc_category_2_1_sum</th>\n",
+       "      <th>enc_category_2_2_sum</th>\n",
+       "      <th>enc_category_2_3_sum</th>\n",
        "      <th>...</th>\n",
-       "      <th>new_category_1_mean</th>\n",
-       "      <th>new_category_1_count_category_1_one</th>\n",
-       "      <th>new_category_1_count_category_1_zero</th>\n",
-       "      <th>new_enc_purchase_date_mean</th>\n",
-       "      <th>new_enc_purchase_date_min</th>\n",
-       "      <th>new_enc_purchase_date_max</th>\n",
-       "      <th>new_enc_purchase_date_ptp</th>\n",
-       "      <th>new_city_id_count_of_unique_cities</th>\n",
-       "      <th>new_state_id_count_of_unique_state_id</th>\n",
-       "      <th>new_subsector_id_count_of_unique_subsector_id</th>\n",
+       "      <th>installments_max</th>\n",
+       "      <th>authorized_flag_mean</th>\n",
+       "      <th>authorized_flag_count_authorized_one</th>\n",
+       "      <th>authorized_flag_count_authorized_zero</th>\n",
+       "      <th>category_1_mean</th>\n",
+       "      <th>category_1_count_category_1_one</th>\n",
+       "      <th>category_1_count_category_1_zero</th>\n",
+       "      <th>enc_purchase_date_mean</th>\n",
+       "      <th>enc_purchase_date_min</th>\n",
+       "      <th>enc_purchase_date_max</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -282,16 +294,16 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1.523023e+09</td>\n",
        "      <td>1.522754e+09</td>\n",
        "      <td>1.523291e+09</td>\n",
-       "      <td>537024.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -306,16 +318,16 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.076923</td>\n",
        "      <td>2</td>\n",
        "      <td>24</td>\n",
        "      <td>1.522335e+09</td>\n",
        "      <td>1.519923e+09</td>\n",
        "      <td>1.525118e+09</td>\n",
-       "      <td>5195343.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -330,16 +342,16 @@
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>1.521474e+09</td>\n",
        "      <td>1.521239e+09</td>\n",
        "      <td>1.521710e+09</td>\n",
-       "      <td>471152.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -354,16 +366,16 @@
        "      <td>8</td>\n",
        "      <td>5</td>\n",
        "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>31</td>\n",
        "      <td>1.512327e+09</td>\n",
        "      <td>1.510761e+09</td>\n",
        "      <td>1.514742e+09</td>\n",
-       "      <td>3981096.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4</td>\n",
-       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -378,97 +390,83 @@
        "      <td>0</td>\n",
        "      <td>11</td>\n",
        "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>11</td>\n",
        "      <td>1.521578e+09</td>\n",
        "      <td>1.519994e+09</td>\n",
        "      <td>1.525100e+09</td>\n",
-       "      <td>5106807.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
+       "<p>5 rows × 27 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           card_id  new_purchase_amount_sum  new_purchase_amount_mean  \\\n",
-       "0  C_ID_00007093c1                -1.328524                 -0.664262   \n",
-       "1  C_ID_0001238066               -14.850055                 -0.571156   \n",
-       "2  C_ID_0001506ef0                -1.447354                 -0.723677   \n",
-       "3  C_ID_0001793786                -0.229620                 -0.007407   \n",
-       "4  C_ID_000183fdda                -6.590778                 -0.599162   \n",
+       "           card_id  purchase_amount_sum  purchase_amount_mean  \\\n",
+       "0  C_ID_00007093c1            -1.328524             -0.664262   \n",
+       "1  C_ID_0001238066           -14.850055             -0.571156   \n",
+       "2  C_ID_0001506ef0            -1.447354             -0.723677   \n",
+       "3  C_ID_0001793786            -0.229620             -0.007407   \n",
+       "4  C_ID_000183fdda            -6.590778             -0.599162   \n",
        "\n",
-       "   new_purchase_amount_max  new_month_lag_sum  new_month_lag_mean  \\\n",
-       "0                -0.656749                  4            2.000000   \n",
-       "1                -0.078318                 35            1.346154   \n",
-       "2                -0.715352                  2            1.000000   \n",
-       "3                 3.129932                 41            1.322581   \n",
-       "4                -0.107680                 14            1.272727   \n",
+       "   purchase_amount_max  month_lag_sum  month_lag_mean  month_lag_max  \\\n",
+       "0            -0.656749              4        2.000000              2   \n",
+       "1            -0.078318             35        1.346154              2   \n",
+       "2            -0.715352              2        1.000000              1   \n",
+       "3             3.129932             41        1.322581              2   \n",
+       "4            -0.107680             14        1.272727              2   \n",
        "\n",
-       "   new_month_lag_max  new_enc_category_2_1_sum  new_enc_category_2_2_sum  \\\n",
-       "0                  2                         1                         0   \n",
-       "1                  2                        23                         0   \n",
-       "2                  1                         0                         0   \n",
-       "3                  2                        17                         8   \n",
-       "4                  2                         0                         0   \n",
+       "   enc_category_2_1_sum  enc_category_2_2_sum  enc_category_2_3_sum  \\\n",
+       "0                     1                     0                     1   \n",
+       "1                    23                     0                     0   \n",
+       "2                     0                     0                     2   \n",
+       "3                    17                     8                     5   \n",
+       "4                     0                     0                    11   \n",
        "\n",
-       "   new_enc_category_2_3_sum                      ...                        \\\n",
-       "0                         1                      ...                         \n",
-       "1                         0                      ...                         \n",
-       "2                         2                      ...                         \n",
-       "3                         5                      ...                         \n",
-       "4                        11                      ...                         \n",
+       "           ...            installments_max  authorized_flag_mean  \\\n",
+       "0          ...                           1                     1   \n",
+       "1          ...                          10                     1   \n",
+       "2          ...                           0                     1   \n",
+       "3          ...                           0                     1   \n",
+       "4          ...                           4                     1   \n",
        "\n",
-       "   new_category_1_mean  new_category_1_count_category_1_one  \\\n",
-       "0             0.000000                                    0   \n",
-       "1             0.076923                                    2   \n",
-       "2             0.000000                                    0   \n",
-       "3             0.000000                                    0   \n",
-       "4             0.000000                                    0   \n",
+       "   authorized_flag_count_authorized_one  \\\n",
+       "0                                     2   \n",
+       "1                                    26   \n",
+       "2                                     2   \n",
+       "3                                    31   \n",
+       "4                                    11   \n",
        "\n",
-       "   new_category_1_count_category_1_zero  new_enc_purchase_date_mean  \\\n",
-       "0                                     2                1.523023e+09   \n",
-       "1                                    24                1.522335e+09   \n",
-       "2                                     2                1.521474e+09   \n",
-       "3                                    31                1.512327e+09   \n",
-       "4                                    11                1.521578e+09   \n",
+       "   authorized_flag_count_authorized_zero  category_1_mean  \\\n",
+       "0                                      0         0.000000   \n",
+       "1                                      0         0.076923   \n",
+       "2                                      0         0.000000   \n",
+       "3                                      0         0.000000   \n",
+       "4                                      0         0.000000   \n",
        "\n",
-       "   new_enc_purchase_date_min  new_enc_purchase_date_max  \\\n",
-       "0               1.522754e+09               1.523291e+09   \n",
-       "1               1.519923e+09               1.525118e+09   \n",
-       "2               1.521239e+09               1.521710e+09   \n",
-       "3               1.510761e+09               1.514742e+09   \n",
-       "4               1.519994e+09               1.525100e+09   \n",
+       "   category_1_count_category_1_one  category_1_count_category_1_zero  \\\n",
+       "0                                0                                 2   \n",
+       "1                                2                                24   \n",
+       "2                                0                                 2   \n",
+       "3                                0                                31   \n",
+       "4                                0                                11   \n",
        "\n",
-       "   new_enc_purchase_date_ptp  new_city_id_count_of_unique_cities  \\\n",
-       "0                   537024.0                                   2   \n",
-       "1                  5195343.0                                   7   \n",
-       "2                   471152.0                                   1   \n",
-       "3                  3981096.0                                   7   \n",
-       "4                  5106807.0                                   2   \n",
+       "   enc_purchase_date_mean  enc_purchase_date_min  enc_purchase_date_max  \n",
+       "0            1.523023e+09           1.522754e+09           1.523291e+09  \n",
+       "1            1.522335e+09           1.519923e+09           1.525118e+09  \n",
+       "2            1.521474e+09           1.521239e+09           1.521710e+09  \n",
+       "3            1.512327e+09           1.510761e+09           1.514742e+09  \n",
+       "4            1.521578e+09           1.519994e+09           1.525100e+09  \n",
        "\n",
-       "   new_state_id_count_of_unique_state_id  \\\n",
-       "0                                      2   \n",
-       "1                                      3   \n",
-       "2                                      1   \n",
-       "3                                      4   \n",
-       "4                                      2   \n",
-       "\n",
-       "   new_subsector_id_count_of_unique_subsector_id  \n",
-       "0                                              2  \n",
-       "1                                              9  \n",
-       "2                                              2  \n",
-       "3                                             14  \n",
-       "4                                              6  \n",
-       "\n",
-       "[5 rows x 31 columns]"
+       "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +495,7 @@
        "(201917, 290001, 179986)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
